Converted to HTML

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-my Web site is alive
+<html xmlns="http://www.w3.org/1999/xhtml">
+<body>
+
+<p>My Web site is alive!</p>
+
+</body>
+
+
+</html>
+
+
